# svSlicer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mesh.hpp
.github/workflows/: buildtest.yml  codechecks.yml
docs/: Doxyfile
src/: main.cpp
